# AIDE-Project

backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/routers/: admin.py  auth.py  challenge.py  character.py  chat.py  choice.py  event.py  scene.py  story.py  upload_file.py  user.py
backend/app/db/: connect.py
backend/app/helper/: auth.py  email.py
backend/app/schema/: auth_schema.py  challenge_schema.py  character_schema.py  chat_schema.py  choice_schema.py  event_schema.py  scene_schema.py  story_schema.py  user_shema.py
backend/app/service/: admin.py  auth.py  challenge.py  character.py  chat.py  choice.py  event.py  scene.py  story.py  user.py
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts
frontend/api/: admin.ts  api.ts  auth.ts  challenge.ts  character.ts  chat.ts  event.ts  scene.ts  story.ts  upload.ts  user.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/components/: NavBar.tsx  SideBar.tsx
frontend/app/context/: AuthContext.tsx
frontend/components/chat/: ChatBot.tsx
frontend/components/dashboard/: CountryHeritages.tsx  CultureShowcase.tsx
frontend/components/event/: DashboardEvent.tsx
frontend/components/layout/: Footer.tsx  NavBar.tsx  SideBar.tsx
frontend/components/markdown/: MarkdownDisplay.tsx  MarkdownEditor.tsx
frontend/components/ui/: Button.tsx  DropdownMenu.tsx  UploadFile.tsx
frontend/context/: AuthContext.tsx
frontend/types/: user.ts
(+20 files in other folders)
