[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.73",
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "resend>=2.26.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
